//This code was generated by a tool at 2016-12-24 12:08:52

import "common_test.proto";

package Table;

message TestA
{
	optional sint32 id = 1; //ID
	optional Common.EnumTest enum_test = 2 [default = ENUM_TEST_INVALID]; //枚举
	repeated uint32 ulist = 3; //int列表
	optional Common.StructTest struct_test = 4; //结构
}

message TestA_ARRAY
{
	repeated TestA rows = 1;
}

message TestB
{
	optional sint32 id1 = 1; //ID1
	optional sint32 id2 = 2; //ID2
	optional Common.EnumTest enum_test = 3 [default = ENUM_TEST_INVALID]; //枚举
	repeated uint32 ulist = 4; //int列表
	optional Common.StructTest struct_test = 5; //结构
}

message TestB_ARRAY
{
	repeated TestB rows = 1;
}

