//auto generate by code at 2016-11-04 01:01:10

import "common_degree.proto";
import "common_effect.proto";

package table;

message test
{
	optional sint32 id = 0; //ID
	optional float num = 2; //学号
}

message test_ARRAY
{
	repeated test rows = 1;
}

message testa
{
	optional sint32 id = 0; //ID
	optional Common.DegreeQualityType degree_quality_type = 2 [default = DEGREE_INVALID]; //学位证书品质
}

message testa_ARRAY
{
	repeated testa rows = 1;
}

